# floor-plan-area-estimation-eval

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  analyze_combined_results.py  manual_scale_measurements.xlsx  prompt.txt  pyproject.toml
results_csvs/: claude_code_fable_5_combined.csv  claude_code_fable_5_run_1.csv  claude_code_fable_5_run_2.csv  claude_code_fable_5_run_3.csv  claude_code_fable_5_run_4.csv  claude_code_opus_4_8_combined.csv  claude_code_opus_4_8_run_1.csv  claude_code_opus_4_8_run_2.csv  claude_code_opus_4_8_run_3.csv  claude_code_opus_4_8_run_4.csv  codex_gpt_5_5.csv  codex_gpt_5_5_combined.csv  codex_gpt_5_5_run_1.csv  codex_gpt_5_5_run_2.csv  codex_gpt_5_5_run_3.csv  codex_gpt_5_5_run_4.csv
